# ML_bias_detection

./: .gitignore  CMakeLists.txt  Documentation.md  README.md  README.txt  main.cpp  multishow0.plt  utilities.cpp
dataset/: Attribute.cpp  Attribute.h  CleanedDataset.cpp  CleanedDataset.h  DataRecord.cpp  DataRecord.h  Dataset.cpp  Dataset.h  GetDataset.md  RawDataRecord.cpp  RawDataRecord.h  attributes.txt
